--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
   <body>
     <p>hello2</p>
     <a href="tiddlywiki.html">tiddlywiki</a>
+    <ul>
+      <li>hello</li>
+      <ol>
+        <li>an ordered item</li>
+      </ol>
+    </ul>
   </body>
 </html>
